--- a/src/main/webapp/resources/css/indexstyle.css
+++ b/src/main/webapp/resources/css/indexstyle.css
@@ -332,11 +332,11 @@ label.right {
 }
 .modal {
     display: none;
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
+    position: absolute;
+    top: 50%;
+    left: 78%;
     width: 400px;
-    height: 400px;
+    height: 800px;
     border-radius: 10px;
     background-color: white;
 }
@@ -358,8 +358,7 @@ label.right {
 .modal .close-button {
     font-size: 25px;
     color: gray;
-    margin-right: 10px;
-    margin-top: 5px;
+    margin-right: 5px;
 }
 .modal .m_content {
     margin-left: 10px;
